# esp-idf-components

./: .clang-format  LICENSE  README.md
components/esp-settings/: README.md  idf_component.yml
components/esp-settings/include/: settings.h
components/esp-tzdata/: CMakeLists.txt  README.md  gen-tzdata.py  idf_component.yml  timezone.c  tz_data.txt
components/esp-tzdata/include/: timezone.h
components/esp-wav-player/: CMakeLists.txt  README.md  component.mk  esp_wav_player.c  idf_component.yml  wav_backend_embed.c  wav_backend_file.c  wav_handle.c  wav_handle.h  wav_header.h
components/esp-wav-player/include/: esp_wav_player.h  wav_object.h
components/esp_http_server_gen/: CMakeLists.txt  component.mk  esp_http_server_content.c  gen_code.sh
components/esp_http_server_gen/include/: esp_http_server_gen.h
components/esp_http_server_utils/: CMakeLists.txt  component.mk  esp_http_server_fota.c  esp_http_server_spiffs.c  esp_http_server_wifi.c  esp_http_upload.c  esp_http_upload.h
components/esp_wav_player/: CMakeLists.txt  esp_wav_object.c  esp_wav_object.h  esp_wav_player.c  esp_wav_player.h  wav_header.h
components/nvs-settings/: Kconfig  LICENSE  component.mk  idf_component.yml  settings.c
examples/: sdkconfig
examples/esp-settings/: CMakeLists.txt  Makefile  README.md
examples/esp-wav-player/: CMakeLists.txt  Makefile  README.md
examples/main/: CMakeLists.txt  main.c
examples/server-gen/: .cproject  .project  CMakeLists.txt  Makefile  README.md  sdkconfig
examples/wav-player/: .project  CMakeLists.txt  Makefile  README.md  sdkconfig
(+26 files in other folders)
